classDiagram
    class KernelIR {
        +str func_name
        +list~str~ param_names
        +str return_name
        +dict~str,Tensor~ tensors
        +dict~str,DimInfo~ dims
        +TreeIR body
        +DepCache dep
    }
    class Tensor {
        +str name
        +tuple dim_ids
        +tuple shape
        +str dtype
        +TensorOrigin origin
        +Literal location
        +dict buffer_degree
    }
    class DimInfo {
        +str dim_id
        +int total_size
        +int tile_size
        +int num_tiles
    }
    class LoopNode {
        +str dim_id
        +int trip_count
        +AxisRole role
        +list children
        +str name
        +int pipeline_depth
        +str reduce_op
    }
    class BodyLeaf {
        +type op_cls
        +dict reads
        +tuple writes
        +tuple reads_writes
        +dict kwargs
        +dict axis_map
        +dict dim_role
    }

    KernelIR "1" o-- "*" Tensor : tensors
    KernelIR "1" o-- "*" DimInfo : dims
    KernelIR "1" *-- "1" TreeIR : body
    TreeIR "1" *-- "*" LoopNode : roots/children
    TreeIR "1" *-- "*" BodyLeaf : leaves
    LoopNode "1" *-- "*" LoopNode : children
    LoopNode "1" *-- "*" BodyLeaf : children
